add delay so mpd-notification would start after mpd

--- a/user_config/.config/hypr/autostart.conf
+++ b/user_config/.config/hypr/autostart.conf
@@ -1,6 +1,6 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = foot --server & $portals & $polkit & hypridle & waybar & swww-daemon & udiskie & $easyeffects & mako & mpd & $mpd_notify &
+exec-once = foot --server & $portals & $polkit & hypridle & waybar & swww-daemon & udiskie & $easyeffects & mako & mpd & sleep 2; $mpd_notify &
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram
 
 
