add rules for bluetoothctl

--- a/user_config/.config/hypr/windowrules.conf
+++ b/user_config/.config/hypr/windowrules.conf
@@ -14,3 +14,9 @@ windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
 windowrulev2=float,class:(com.vysp3r.ProtonPlus)$ #flatpak ProtonPlus app
 windowrulev2=float,class:(qalculate-gtk)$ #flatpak Qalculate-gtk app
+
+#bluetoothctl, if launched by clicking on waybar bluetooth module
+windowrulev2=float,title:(bluetooth control)$
+windowrulev2=size 800 800,title:(bluetooth control)$
+windowrulev2=center,title:(bluetooth control)$
+
