add windowrules for planify app

--- a/user_config/.config/hypr/windowrules.conf
+++ b/user_config/.config/hypr/windowrules.conf
@@ -20,3 +20,6 @@ windowrulev2=float,title:(bluetooth control)$
 windowrulev2=size 800 800,title:(bluetooth control)$
 windowrulev2=center,title:(bluetooth control)$
 
+#flatpak Planify app
+windowrulev2=float, class:(io.github.alainm23.planify)$
+windowrulev2=size 1000 800, class:(io.github.alainm23.planify)$
