--- a/user_config/.config/waybar/config.jsonc
+++ b/user_config/.config/waybar/config.jsonc
@@ -29,6 +29,7 @@
 
             ],
     "modules-center": [
+        "tray",
         "hyprland/workspaces",
         "hyprland/window"
 
@@ -39,8 +40,7 @@
 	"pulseaudio",
         "network",
         "clock#date",
-        "clock#time",
-        "tray"
+        "clock#time"
             ],
 
 
