--- a/user_config/.config/hypr/hyprlock.conf
+++ b/user_config/.config/hypr/hyprlock.conf
@@ -44,7 +44,7 @@ input-field {
 
 label {
     monitor =
-    text = $LAYOUT
+    text = 
     color = rgba(200, 200, 200, 1.0)
     font_size = 20
     font_family = Noto Sans
