use catppuccin theme

--- a/user_config/.config/foot/foot.ini
+++ b/user_config/.config/foot/foot.ini
@@ -229,4 +229,7 @@ search-start=Control+Shift+slash
 # vim: ft=dosini
 
 [main]
-include=/usr/share/foot/themes/rose-pine
+#include=/usr/share/foot/themes/rose-pine
+include=/usr/share/foot/themes/catppuccin
+#include=/usr/share/foot/themes/starlight
+
