hypr catppuccin theme

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -2,6 +2,8 @@
 #use 'hyprctl monitors' 
 monitor=,preferred,auto,1
 
+#theme
+source=~/.config/hypr/mocha.conf
 
 
 general {
@@ -10,8 +12,8 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba($blueAlphaee) rgba($sapphireAlphaee) 45deg
+    col.inactive_border = rgba($baseAlphaaa)
     cursor_inactive_timeout = 5
     layout = dwindle
 
@@ -35,7 +37,7 @@ decoration {
     drop_shadow = true
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = rgba($crustAlphaee)
     dim_inactive = true
     dim_strength = 0.4
     dim_special = 0.3
