--- a/user_config/.config/hypr/windowrules.conf
+++ b/user_config/.config/hypr/windowrules.conf
@@ -15,6 +15,12 @@ windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
 windowrulev2=float,class:(com.vysp3r.ProtonPlus)$ #flatpak ProtonPlus app
 windowrulev2=float,class:(qalculate-gtk)$ #flatpak Qalculate-gtk app
 
+#Appimage - ProtonUp-Qt
+windowrulev2=float,class:(net.davidotek.pupgui2)$
+windowrulev2=size 600 600,  class:(net.davidotek.pupgui2)$
+windowrulev2=center, class:(net.davidotek.pupgui2)$
+
+
 #bluetoothctl, if launched by clicking on waybar bluetooth module
 windowrulev2=float,title:(bluetooth control)$
 windowrulev2=size 800 800,title:(bluetooth control)$
