--- a/user_config/.config/hypr/keybinds.conf
+++ b/user_config/.config/hypr/keybinds.conf
@@ -29,11 +29,10 @@ bind = ,XF86AudioPlay, exec, mpc toggle
 bind = $mainMod, code:69, exec, brightnessctl set +10%
 bind = $mainMod, code:68, exec, brightnessctl set 10%-
 
-#pactl
-bind = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% 
-bind = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% 
-bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle 
-bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle 
+#wireplumber - volume control
+bind = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_SINK@ 0.05+
+bind = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_SINK@ 0.05-
+bind = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 
 #lid switch
 #bindl=,switch:[Lid Switch],exec,$lock
