replace pavucontrol with its flatpak version

--- a/user_config/.config/waybar/config.jsonc
+++ b/user_config/.config/waybar/config.jsonc
@@ -191,7 +191,7 @@
             "default": ["", "  "]
         },
 	"on-click": "wpctl set-mute @DEFAULT_SINK@ toggle", 
-        "on-click-right": "pavucontrol",
+        "on-click-right": "flatpak run org.pulseaudio.pavucontrol",
 	"ignored-sinks": ["Easy Effects Sink"]
     },
 
@@ -219,7 +219,7 @@
     "format-bluetooth": "{icon}  {volume}%",
     "format-muted": "",
     "on-click": "wpctl set-mute @DEFAULT_SINK@ toggle",
-    "on-click-right": "pavucontrol",
+    "on-click-right": "flatpak run org.pulseaudio.pavucontrol",
     "max-volume": 130,
     "format-icons": ["", "", ""],
     "ignored-sinks": ["Easy Effects Sink"]
