--- a/user_config/.config/hypr/hyprlock.conf
+++ b/user_config/.config/hypr/hyprlock.conf
@@ -1,55 +1,79 @@
+source = $HOME/.config/hypr/mocha.conf
+
+$accent = $mauve
+$accentAlpha = $mauveAlpha
+$font = JetBrainsMono Nerd Font
+
+# GENERAL
 general {
-     hide_cursor = true
-     ignore_empty_input = true
+    disable_loading_bar = true
+    hide_cursor = true
 }
 
-
+# BACKGROUND
 background {
     monitor =
-    path = screenshot
-    color = rgba(25, 20, 20, 1.0)
-
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 1 # 0 disables blurring
-    blur_size = 15
-    noise = 0.0117
-    contrast = 0.8916
-    brightness = 0.2
-    vibrancy = 0.1696
-    vibrancy_darkness = 0.0
+    path = ~/.local/share/backgrounds/26.png
+    blur_passes = 0
+    color = $base
 }
 
-input-field {
-    monitor =
-    size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = false
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-
-    position = 0, -20
-    halign = center
-    valign = center
-}
-
-
+# TIME
 label {
     monitor =
-    text = 
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 20
-    font_family = Noto Sans
+    text = cmd[update:30000] echo "$(date +"%R")"
+    color = $text
+    font_size = 90
+    font_family = $font
+    position = -30, 0
+    halign = right
+    valign = top
+}
 
-    position = 0, 80
+# DATE 
+label {
+    monitor = 
+    text = cmd[update:43200000] echo "$(date +"%A, %d %B %Y")"
+    color = $text
+    font_size = 25
+    font_family = $font
+    position = -30, -150
+    halign = right
+    valign = top
+}
+
+# USER AVATAR
+
+image {
+    monitor = 
+    path = ~/.face
+    size = 100
+    border_color = $accent
+
+    position = 0, 75
     halign = center
     valign = center
-} 
+}
+
+# INPUT FIELD
+input-field {
+    monitor =
+    size = 300, 60
+    outline_thickness = 4
+    dots_size = 0.2
+    dots_spacing = 0.2
+    dots_center = true
+    outer_color = $accent
+    inner_color = $surface0
+    font_color = $text
+    fade_on_empty = false
+    placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+    hide_input = false
+    check_color = $accent
+    fail_color = $red
+    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+    capslock_color = $yellow
+    position = 0, -35
+    halign = center
+    valign = center
+}
