Fix iGPU rendering and add xcb fallback to QT

--- a/user_config/.config/hypr/env.conf
+++ b/user_config/.config/hypr/env.conf
@@ -1,7 +1,6 @@
-#using intel gpu for rendering
-#run lspci | grep -E 'VGA|3D' , then
-#ls -l /dev/dri/by-path to list GPUs and their bus IDs.
-env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
+#using integrated GPU for rendering
+#https://wiki.hyprland.org/Configuring/Multi-GPU/
+env = WLR_DRM_DEVICES,$HOME/.config/hypr/intel-iGPU
 
 #nvidia
 #env = LIBVA_DRIVER_NAME,nvidia
@@ -14,7 +13,7 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XCURSOR_SIZE,24
 env = _JAVA_AWT_WM_NONREPARENTING,1
-env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
