make instruction more clear

--- a/user_config/.config/hypr/env.conf
+++ b/user_config/.config/hypr/env.conf
@@ -1,17 +1,14 @@
 #using integrated GPU for rendering
 #https://wiki.hyprland.org/Configuring/Multi-GPU/
+#lspci | \grep -E 'VGA|3D'
+#ls -l /dev/dri/by-path
+#ln -sf /dev/dri/by-path/pci-***-card $HOME/.config/hypr/iGPU
 env = WLR_DRM_DEVICES,$HOME/.config/hypr/intel-iGPU
 
-#nvidia
-#env = LIBVA_DRIVER_NAME,nvidia
-#env = GBM_BACKEND,nvidia-drm
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-#env = WLR_NO_HARDWARE_CURSORS,1
 
 #variables
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
-env = XCURSOR_SIZE,24
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
