--- a/user_config/.config/hypr/hyprlock.conf
+++ b/user_config/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/.local/share/backgrounds/26.png
+    path = ~/.wallpaper
     blur_passes = 0
     color = $base
 }
