--- a/user_config/.config/hypr/hyprpaper.conf
+++ b/user_config/.config/hypr/hyprpaper.conf
@@ -1,7 +1,4 @@
-$BGDIR=$HOME/.local/share/backgrounds
-$BG1=26.png
-
-preload = $BGDIR/$BG1
-wallpaper = eDP-1,$BGDIR/$BG1
+preload = ~/.wallpaper
+wallpaper = eDP-1,~/.wallpaper
 splash = false
 ipc = off 
