--- a/user_config/.config/hypr/apps.conf
+++ b/user_config/.config/hypr/apps.conf
@@ -12,5 +12,4 @@ $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
 $polkit = /usr/lib/polkit-kde-authentication-agent-1
 $portals = $HOME/.local/bin/desktop-portal-launch
 $mpd_notify = mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
-
-
+$bgreload = killall -e hyprpaper & sleep 1; hyprpaper &
