--- a/user_config/.config/hypr/keybinds.conf
+++ b/user_config/.config/hypr/keybinds.conf
@@ -7,7 +7,7 @@ bind = $mainMod, Return, exec, $term
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, Q, killactive,
 bind = $extraMod, Q, exec, $HOME/.local/bin/killhypr
-bind = $extraMod, R, exec, $HOME/.local/bin/bgreload
+bind = $extraMod, R, exec, $bgreload
 bind = $mainMod, N, exec, $filemanager
 bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, D, exec, $menu
