use XF86 brightness keys to control brightnessctl

--- a/user_config/.config/hypr/keybinds.conf
+++ b/user_config/.config/hypr/keybinds.conf
@@ -11,7 +11,7 @@ bind = $extraMod, R, exec, $bgreload
 bind = $mainMod, N, exec, $filemanager
 bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, P, pseudo, #also, f4 key # dwindle
 bind = $mainMod, X, togglesplit, # dwindle
 bind = $mainMod, W, exec, $browser
 bind = $mainMod, T, exec, $clock
@@ -27,8 +27,8 @@ bind = ,XF86AudioPrev, exec, mpc prev
 bind = ,XF86AudioPlay, exec, mpc toggle
 
 #brightnessctl
-bind = $mainMod, code:69, exec, brightnessctl set +10%
-bind = $mainMod, code:68, exec, brightnessctl set 10%-
+bind = ,XF86MonBrightnessUp, exec, brightnessctl set +10%
+bind = ,XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 #wireplumber - volume control
 bind = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_SINK@ 0.05+
