add XDG_CURRENT_DESKTOP variable

--- a/user_config/.config/hypr/env.conf
+++ b/user_config/.config/hypr/env.conf
@@ -8,6 +8,7 @@ env = WLR_DRM_DEVICES,$HOME/.config/hypr/intel-iGPU
 
 #variables
 env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland;xcb
