--- a/user_config/.config/nwg-look/config
+++ b/user_config/.config/nwg-look/config
@@ -2,5 +2,5 @@
  "export-settings-ini": true,
  "export-gtkrc-20": false,
  "export-index-theme": true,
- "export-xsettingsd": true
+ "export-xsettingsd": false
 }
