add true fullscreen keybind

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -5,6 +5,7 @@ $extraMod = SUPER_SHIFT
 #keyboard shortcuts
 bind = $mainMod, Return, exec, $term
 bind = $mainMod, F, fullscreen, 1
+bind = $extraMod, F, fullscreen, 0
 bind = $mainMod, Q, killactive,
 bind = $extraMod, Q, exec, $HOME/.local/bin/killhypr
 bind = $extraMod, R, exec, $bgreload
