--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -5,14 +5,9 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2=idleinhibit fullscreen, fullscreen:1
-windowrulev2=nofocus, title:(preview-tui)$ #never focus nnn preview-tui plugin
-windowrulev2=nodim, title:(preview-tui)$ #never dim nnn preview-tui plugin
 windowrulev2=nodim, title:(tty-clock)$ #never dim tty-clock terminal window
 windowrulev2=size 800 600,  class:(xdg-desktop-portal-gtk)$
-windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
-windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
-windowrulev2=float,class:(com.vysp3r.ProtonPlus)$ #flatpak ProtonPlus app
 windowrulev2=float,class:(qalculate-gtk)$ #flatpak Qalculate-gtk app
 
 #Appimage - ProtonUp-Qt
@@ -26,6 +21,14 @@ windowrulev2=float,title:(bluetooth control)$
 windowrulev2=size 800 800,title:(bluetooth control)$
 windowrulev2=center,title:(bluetooth control)$
 
-#flatpak Planify app
+#flatpak Planify 
 windowrulev2=float, class:(io.github.alainm23.planify)$
 windowrulev2=size 1000 800, class:(io.github.alainm23.planify)$
+
+#nnn preview-tui plugin
+windowrulev2=nofocus, title:(preview-tui)$ 
+windowrulev2=nodim, title:(preview-tui)$ 
+
+#flatpak Mousam
+windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ 
+windowrulev2=float,class:(io.github.amit9838.mousam)$
