update cursor var

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,11 +14,16 @@ general {
     border_size = 1
     col.active_border = rgba($blueAlphaee) rgba($sapphireAlphaee) 45deg
     col.inactive_border = rgba($baseAlphaaa)
-    cursor_inactive_timeout = 5
     layout = dwindle
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
+}
+
+cursor {
+
+inactive_timeout= 5
+
 }
 
 decoration {
