update cursor variable

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,17 +15,16 @@ general {
     col.active_border = rgba($blueAlphaee) rgba($sapphireAlphaee) 45deg
     col.inactive_border = rgba($baseAlphaaa)
     layout = dwindle
-    cursor_inactive_timeout = 5 #legacy
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
-#cursor {
+cursor {
 
-#inactive_timeout = 5
+inactive_timeout = 5
 
-#}
+}
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
