--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -6,7 +6,6 @@
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2=idleinhibit fullscreen, fullscreen:1
 windowrulev2=nodim, title:(tty-clock)$ #never dim tty-clock terminal window
-windowrulev2=size 800 600,  class:(xdg-desktop-portal-gtk)$
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
 windowrulev2=float,class:(qalculate-gtk)$ #flatpak Qalculate-gtk app
 
@@ -32,3 +31,7 @@ windowrulev2=nodim, title:(preview-tui)$
 #flatpak Mousam
 windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ 
 windowrulev2=float,class:(io.github.amit9838.mousam)$
+
+#xdg-desktp-portal-gtk
+windowrulev2=float, class:(xdg-desktop-portal-gtk)$
+windowrulev2=size 800 600,  class:(xdg-desktop-portal-gtk)$
