--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -14,7 +14,6 @@ windowrulev2=float,class:(net.davidotek.pupgui2)$
 windowrulev2=size 600 600,  class:(net.davidotek.pupgui2)$
 windowrulev2=center, class:(net.davidotek.pupgui2)$
 
-
 #bluetoothctl, if launched by clicking on waybar bluetooth module
 windowrulev2=float,title:(bluetooth control)$
 windowrulev2=size 800 800,title:(bluetooth control)$
@@ -32,6 +31,11 @@ windowrulev2=nodim, title:(preview-tui)$
 windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ 
 windowrulev2=float,class:(io.github.amit9838.mousam)$
 
-#xdg-desktp-portal-gtk
+#xdg-desktop-portal-gtk
 windowrulev2=float, class:(xdg-desktop-portal-gtk)$
 windowrulev2=size 800 600,  class:(xdg-desktop-portal-gtk)$
+
+#htop
+windowrulev2=float, title:(htop)$
+windowrulev2=size 1400 800, title:(htop)$
+windowrulev2=center,title:(htop)$
