reorganize hypr config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -87,10 +87,10 @@ misc {
 
 
 #source
-source = $HOME/.config/hypr/env.conf
-source = $HOME/.config/hypr/apps.conf
-source = $HOME/.config/hypr/autostart.conf
-source = $HOME/.config/hypr/windowrules.conf
-source = $HOME/.config/hypr/keybinds.conf
-source = $HOME/.config/hypr/input.conf
+source = $HOME/.config/hypr/hyprland.conf.d/env.conf
+source = $HOME/.config/hypr/hyprland.conf.d/apps.conf
+source = $HOME/.config/hypr/hyprland.conf.d/autostart.conf
+source = $HOME/.config/hypr/hyprland.conf.d/windowrules.conf
+source = $HOME/.config/hypr/hyprland.conf.d/keybinds.conf
+source = $HOME/.config/hypr/hyprland.conf.d/input.conf
 
