--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -22,6 +22,7 @@ windowrulev2=center,title:(bluetooth control)$
 #flatpak Planify 
 windowrulev2=float, class:(io.github.alainm23.planify)$
 windowrulev2=size 1000 800, class:(io.github.alainm23.planify)$
+windowrulev2=center, class:(io.github.alainm23.planify)$
 
 #nnn preview-tui plugin
 windowrulev2=nofocus, title:(preview-tui)$ 
@@ -30,6 +31,7 @@ windowrulev2=nodim, title:(preview-tui)$
 #flatpak Mousam
 windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ 
 windowrulev2=float,class:(io.github.amit9838.mousam)$
+windowrulev2=center, class:(io.github.amit9838.mousam)$
 
 #xdg-desktop-portal-gtk
 windowrulev2=float, class:(xdg-desktop-portal-gtk)$
