add cliphist to autostart and keybind

--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -13,3 +13,5 @@ $polkit = /usr/lib/polkit-kde-authentication-agent-1
 $portals = $HOME/.local/bin/desktop-portal-launch
 $mpd_notify = mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $bgreload = killall -e hyprpaper & sleep 1; hyprpaper &
+$clipboard = wl-paste --watch cliphist store
+$clipboard-copy = cliphist list | fuzzel -d | cliphist decode | wl-copy
