--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -21,6 +21,7 @@ bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Z, exec, $lock 
 bind = $mainMod, PRINT, exec, $screenshot
+bind = $mainMod, V, exec, $clipboard-copy
 
 #mpd-mpc remote control
 bind = ,XF86AudioNext, exec, mpc next
