--- a/.config/hypr/hyprland.conf.d/autostart.conf
+++ b/.config/hypr/hyprland.conf.d/autostart.conf
@@ -1,6 +1,4 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = foot --server & $portals & $polkit & hypridle & waybar & hyprpaper & $easyeffects & mako & mpd & sleep 2; $mpd_notify & $clipboard &
+exec-once = foot --server & $portals & $polkit & hypridle & waybar & hyprpaper & $easyeffects & mako & $clipboard & mpd & sleep 2; $mpd_notify &
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram &
-
-
