prevent mpd-notification from multiplying upon relaunching the compositor

--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -11,7 +11,7 @@ $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
 $polkit = /usr/lib/polkit-kde-authentication-agent-1
 $portals = $HOME/.local/bin/desktop-portal-launch
-$mpd_notify = mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
+$mpd_notify = killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $bgreload = killall -e hyprpaper & sleep 1; hyprpaper &
 $clipboard = wl-paste --watch cliphist store
 $clipboard-copy = cliphist list | fuzzel -d | cliphist decode | wl-copy
