--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -16,3 +16,4 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 env = HYPRCURSOR_SIZE,24
+#env = ELECTRON_OZONE_PLATFORM_HINT,auto
