move gestures to input section

--- a/.config/hypr/hyprland.conf.d/input.conf
+++ b/.config/hypr/hyprland.conf.d/input.conf
@@ -7,7 +7,7 @@ input {
 
     follow_mouse = 1
 
-    touchpad {
+touchpad {
         natural_scroll = false
 	clickfinger_behavior = 1
     }
@@ -15,8 +15,14 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-#per-device configs
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+gestures {
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
 }
+
+#per-device configs
+#device {
+#    name = epic-mouse-v1
+#    sensitivity = -0.5
+#}
