--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -19,6 +19,7 @@ bind = $mainMod, T, exec, $clock
 bind = $mainMod, E, exec, $editor
 bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
+bind = $extraMod, Escape, exec, systemctl reboot
 bind = $extraMod, Z, exec, $lock 
 bind = $mainMod, PRINT, exec, $screenshot
 bind = $mainMod, V, exec, $clipboard-copy
