add tabbed layout config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,6 +20,22 @@ general {
     allow_tearing = false
 }
 
+group {
+
+    col.border_active = rgba($pinkAlphaee) rgba($tealAlphaee) 45deg
+    col.border_inactive = rgba($baseAlphaaa)
+
+groupbar {
+
+    font_size = 11
+    text_color= rgba($textAlphaee)
+    col.active = rgba($overlay0Alphaee)
+    col.inactive = rgba($baseAlphaee)
+
+}
+
+}
+
 cursor {
 
 inactive_timeout = 5
