--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -23,6 +23,10 @@ bind = $extraMod, Escape, exec, systemctl reboot
 bind = $extraMod, Z, exec, $lock 
 bind = $mainMod, PRINT, exec, $screenshot
 bind = $mainMod, V, exec, $clipboard-copy
+bind = $extraMod, T, togglegroup
+bind = $extraMod, X, moveoutofgroup
+bind = $mainMod, B, changegroupactive, f 
+bind = $mainMod, Z, changegroupactive, b
 
 #mpd-mpc remote control
 bind = ,XF86AudioNext, exec, mpc next
