Preview-tui window - always deny group

--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -27,6 +27,7 @@ windowrulev2=center, class:(io.github.alainm23.planify)$
 #nnn preview-tui plugin
 windowrulev2=nofocus, title:(preview-tui)$ 
 windowrulev2=nodim, title:(preview-tui)$ 
+windowrulev2=group deny, title:(preview-tui)$
 
 #flatpak Mousam
 windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ 
