--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -20,13 +20,14 @@ bind = $mainMod, E, exec, $editor
 bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Escape, exec, systemctl reboot
-bind = $extraMod, Z, exec, $lock 
 bind = $mainMod, PRINT, exec, $screenshot
 bind = $mainMod, V, exec, $clipboard-copy
 bind = $extraMod, T, togglegroup
 bind = $extraMod, X, moveoutofgroup
 bind = $mainMod, B, changegroupactive, f 
 bind = $mainMod, Z, changegroupactive, b
+bind = $extraMod, B, movegroupwindow, f
+bind = $extraMod, Z, movegroupwindow, b
 
 #mpd-mpc remote control
 bind = ,XF86AudioNext, exec, mpc next
