update blur, add slurp and update gestures

--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -7,6 +7,7 @@ $sysmonitor = $term -T htop -e htop
 $browser = flatpak run org.mozilla.firefox
 $lock = loginctl lock-session
 $screenshot = grim
+$screenshot2 = slurp | grim -g - $HOME/Pictures/slurp_screenshot.png
 $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
 $polkit = /usr/lib/polkit-kde-authentication-agent-1
