--- a/.config/hypr/hyprland.conf.d/input.conf
+++ b/.config/hypr/hyprland.conf.d/input.conf
@@ -8,8 +8,9 @@ input {
     follow_mouse = 1
 
 touchpad {
-        natural_scroll = false
-	clickfinger_behavior = 1
+    natural_scroll = false
+    clickfinger_behavior = 1
+    tap-and-drag = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -19,6 +20,7 @@ gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = true
     workspace_swipe_fingers = 3
+    workspace_swipe_min_fingers = true
 }
 
 #per-device configs
