--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -21,6 +21,7 @@ bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Escape, exec, systemctl reboot
 bind = $mainMod, PRINT, exec, $screenshot
+bind = $extraMod, PRINT, exec, $screenshot2
 bind = $mainMod, V, exec, $clipboard-copy
 bind = $extraMod, T, togglegroup
 bind = $extraMod, X, moveoutofgroup
