--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -40,7 +40,7 @@ bind = ,XF86MonBrightnessUp, exec, brightnessctl set +10%
 bind = ,XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 #wireplumber - volume control
-bind = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_SINK@ 0.05+
+bind = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_SINK@ 0.05+
 bind = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_SINK@ 0.05-
 bind = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 
