--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -288,4 +288,21 @@
       "on-click-right": "footclient"
     }       
 
+},
+
+"wlr/taskbar": {
+    "format": "{icon}  ",
+    "icon-size": 14,
+    "icon-theme": "Papirus-Dark",
+    "tooltip-format": "{title}",
+    "on-click": "activate",
+    "on-click-middle": "close",
+    "ignore-list": [
+    ],
+    "app_ids-mapping": {
+    },
+    "rewrite": {
+        "Firefox Web Browser": "Firefox",
+        "Foot Server": "Terminal"
+    }
 }
