--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -283,18 +283,17 @@
 
     "custom/arch": {
       "format": " ",
-      "tooltip": false,
-      "on-click": "fuzzel",
-      "on-click-right": "footclient"
+      "tooltip": false
     }       
 
 },
 
 "wlr/taskbar": {
-    "format": "{icon}  ",
+    "format": "{icon}{state}  ",
     "icon-size": 14,
     "icon-theme": "Papirus-Dark",
     "tooltip-format": "{title}",
+    "active-first": true,
     "on-click": "activate",
     "on-click-middle": "close",
     "ignore-list": [
@@ -302,7 +301,5 @@
     "app_ids-mapping": {
     },
     "rewrite": {
-        "Firefox Web Browser": "Firefox",
-        "Foot Server": "Terminal"
     }
 }
