--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -128,7 +128,7 @@
 	"tooltip-format": "{controller_alias}\t{controller_address}",
 	"tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
 	"tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-        "on-click-right": "foot -T 'bluetooth control' -e bluetoothctl"
+        "on-click-right": "foot -T 'bluetooth control' bluetoothctl"
 },
 
 "disk": {
@@ -306,4 +306,3 @@
     }       
 
 }
-
