hypr foot - remove not needed e flag

--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -1,9 +1,9 @@
 $term = footclient
-$filemanager = $term -T nnn -e $HOME/.local/bin/nwrap
+$filemanager = $term -T nnn  $HOME/.local/bin/nwrap
 $menu = fuzzel
-$clock = $term -T tty-clock -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
-$editor = $term -T neovim -e nvim
-$sysmonitor = $term -T htop -e htop
+$clock = $term -T tty-clock tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
+$editor = $term -T neovim  nvim
+$sysmonitor = $term -T htop  htop
 $browser = flatpak run org.mozilla.firefox
 $screenshot = grim
 $screenshot2 = slurp | grim -g - $HOME/Pictures/slurp_screenshot.png
