--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -9,7 +9,7 @@
 # filter-desktop=no
 # fuzzy=yes
 # show-actions=no
- terminal=footclient -e  # Note: you cannot actually use environment variables here
+ terminal=footclient  # Note: you cannot actually use environment variables here
 # launch-prefix=<not set>
 
 # lines=15
