add blur for launcher

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,6 +37,7 @@ groupbar {
 
 cursor {
 
+no_hardware_cursors = false
 inactive_timeout = 5
 
 }
@@ -93,6 +94,8 @@ misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
+
+layerrule = blur,launcher
 
 #source
 source = $HOME/.config/hypr/hyprland.conf.d/env.conf
