--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -10,7 +10,7 @@ $screenshot2 = slurp | grim -g - $HOME/Pictures/slurp_screenshot.png
 $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
 $polkit = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-$portals = $HOME/.local/bin/desktop-portal-launch
+$portals = sleep 1; killall xdg-desktop-portal-hyprland & killall xdg-desktop-portal & sleep 1; /usr/lib/xdg-desktop-portal-hyprland & sleep 2; /usr/lib/xdg-desktop-portal
 $mpd_notify = killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $bgreload = killall -e hyprpaper & sleep 1; hyprpaper &
 $clipboard = wl-paste --watch cliphist store
