--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -13,6 +13,6 @@ env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
-env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+env = HYPRCURSOR_THEME,catppuccin-mocha-dark
 env = HYPRCURSOR_SIZE,24
 #env = ELECTRON_OZONE_PLATFORM_HINT,auto
