add blur for notifications and a commit on why native wayland electron sucks

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -96,6 +96,8 @@ misc {
 }
 
 layerrule = blur,launcher
+layerrule = blur, notifications
+layerrule = ignorezero, notifications
 
 #source
 source = $HOME/.config/hypr/hyprland.conf.d/env.conf
