--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -15,4 +15,4 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark
 env = HYPRCURSOR_SIZE,24
-#env = ELECTRON_OZONE_PLATFORM_HINT,auto
+#env = ELECTRON_OZONE_PLATFORM_HINT,auto  #it takes a very long time, for an electron app, to start on wayland
