enable electron wayland

--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -5,14 +5,19 @@
 #ln -sf /dev/dri/by-path/pci-***-card $HOME/.config/hypr/iGPU
 env = WLR_DRM_DEVICES,$HOME/.config/hypr/intel-iGPU
 
+
 #variables
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
+env = GDK_BACKEND,wayland
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
+env = EGL_PLATFORM, wayland
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark
 env = HYPRCURSOR_SIZE,24
-#env = ELECTRON_OZONE_PLATFORM_HINT,auto  #it takes a very long time, for an electron app, to start on wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,auto 
