--- a/.config/swayimg/config
+++ b/.config/swayimg/config
@@ -25,15 +25,18 @@ fullscreen = no
 # Anti-aliasing (yes/no)
 antialiasing = no
 
-# Background for transparent images (none/grid/RGB, e.g. #112233)
+# Fix position of the image on the window surface (yes/no)
+fixed = yes
+
+# Background for transparent images (grid/RGB/RGBA, e.g. #112233)
 transparency = grid
 
 # Window position (parent or absolute coordinates, e.g. 100,200)
 position = parent
 # Window size (parent, image, or absolute size, e.g. 800,600)
 size = parent
-# Window background mode/color (none/RGB, e.g. #112233)
-background = none
+# Window background mode/color (RGB/RGBA, e.g. #11223344)
+background = #00000000
 
 # Run slideshow at startup (yes/no)
 slideshow = no
@@ -52,6 +55,10 @@ loop = yes
 recursive = no
 # Open all files in the start directory (yes/no)
 all = yes
+# Number of previously viewed images to store in cache
+cache = 1
+# Number of preloaded images (read ahead)
+preload = 1
 
 ################################################################################
 # Font configuration
@@ -60,7 +67,7 @@ all = yes
 # Font name
 name = monospace
 # Font size (in pt)
-size = 14
+size = 12
 # Font color
 color = #cccccc
 # Drop shadow (none/RGB, e.g. #112233)
@@ -72,6 +79,8 @@ shadow = #000000
 [info]
 # Mode on startup (off/brief/full)
 mode = full
+# Hide image information after a timeout (seconds or percent for slideshow mode)
+timeout = 0
 # Display scheme for the "full" mode: position = content
 full.topleft = name,format,filesize,imagesize,exif
 full.topright = index
@@ -105,6 +114,7 @@ Shift+d = prev_dir
 d = next_dir
 Shift+o = prev_frame
 o = next_frame
+c = skip_file
 Shift+s = slideshow
 s = animation
 f = fullscreen
