replace ~ with $HOME variable

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/.wallpaper
+    path = $HOME/.wallpaper
     blur_passes = 0
     color = $base
 }
@@ -46,7 +46,7 @@ label {
 
 image {
     monitor = 
-    path = ~/.face
+    path = $HOME/.face
     size = 100
     border_color = $accent
 
