--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/.wallpaper
-wallpaper = eDP-1,~/.wallpaper
+preload = $HOME/.wallpaper
+wallpaper = eDP-1,$HOME/.wallpaper
 splash = false
 ipc = off 
