--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 monitor=,preferred,auto,1
 
 #theme
-source=~/.config/hypr/mocha.conf
+source=$HOME/.config/hypr/mocha.conf
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
