fix blur/transparency on a special workspace

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -79,6 +79,10 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
+opengl {
+    force_introspection = 1
+}
+
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
