--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -5,11 +5,16 @@
 #ln -sf /dev/dri/by-path/pci-***-card $HOME/.config/hypr/iGPU
 env = WLR_DRM_DEVICES,$HOME/.config/hypr/intel-iGPU
 
-
-#variables
+#XDG specs
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
+
+#cursor
+env = HYPRCURSOR_THEME,catppuccin-mocha-dark
+env = HYPRCURSOR_SIZE,24
+
+#other vars
 env = GDK_BACKEND,wayland
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
@@ -18,6 +23,4 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 env = EGL_PLATFORM, wayland
-env = HYPRCURSOR_THEME,catppuccin-mocha-dark
-env = HYPRCURSOR_SIZE,24
 env = ELECTRON_OZONE_PLATFORM_HINT,auto 
