--- a/.config/swayimg/config
+++ b/.config/swayimg/config
@@ -67,11 +67,11 @@ preload = 1
 # Font name
 name = monospace
 # Font size (in pt)
-size = 12
-# Font color
-color = #cccccc00
-# Drop shadow (none/RGB, e.g. #112233)
-shadow = #00000000
+size = 14
+# Font color (RGB or RGBA, e.g. #11223344)
+color = #cccccc
+# Shadow color (RGB or RGBA, disable: #00000000)
+shadow = #000000a0
 
 ################################################################################
 # Image meta info scheme (format, size, EXIF, etc)
