--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -49,6 +49,7 @@ border=b4befeff
 # cancel=Escape Control+g
 # execute=Return KP_Enter Control+y
 # execute-or-next=Tab
+# execute-input=Shift+Return Shift+KP_Enter
 # cursor-left=Left Control+b
 # cursor-left-word=Control+Left Mod1+b
 # cursor-right=Right Control+f
@@ -57,9 +58,10 @@ border=b4befeff
 # cursor-end=End Control+e
 # delete-prev=BackSpace
 # delete-prev-word=Mod1+BackSpace Control+BackSpace
+# delete-line-backward=Control+u
 # delete-next=Delete KP_Delete Control+d
 # delete-next-word=Mod1+d Control+Delete Control+KP_Delete
-# delete-line=Control+k
+# delete-line-forward=Control+k
 # prev=Up Control+p
 # prev-with-wrap=ISO_Left_Tab
 # prev-page=Page_Up KP_Page_Up
