aquamarine update + enable explicit sync experimenta

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -95,6 +95,10 @@ misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
 
+experimental {
+  explicit_sync = yes
+}
+
 layerrule = blur,launcher
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
