--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -2,8 +2,7 @@
 #https://wiki.hyprland.org/Configuring/Multi-GPU/
 #lspci | \grep -E 'VGA|3D'
 #ls -l /dev/dri/by-path
-#ln -sf /dev/dri/by-path/pci-***-card $HOME/.config/hypr/iGPU
-env = WLR_DRM_DEVICES,$HOME/.config/hypr/intel-iGPU
+env = AQ_DRM_DEVICES,/dev/dri/card1
 
 #XDG specs
 env = XDG_SESSION_DESKTOP,Hyprland
