--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -3,11 +3,17 @@
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2=idleinhibit fullscreen, fullscreen:1
-windowrulev2=nodim, title:(tty-clock)$ #never dim tty-clock terminal window
+
+
+#all windows
+windowrulev2=suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2=idleinhibit fullscreen, fullscreen:1 #do not idleinhibit if there's a fullscreen window
+windowrulev2=dimaround, floating:1 #force focus on a last opened floating app and dim the screen around it
+
+#single rule windows
+windowrulev2=nodim,title:(tty-clock)$ #never dim tty-clock terminal window
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
-windowrulev2=float,class:(qalculate-gtk)$ #flatpak Qalculate-gtk app
+windowrulev2=float,class:(qalculate-gtk)$ #flatpak Qalculate-GTK app
 
 #Appimage - ProtonUp-Qt
 windowrulev2=float,class:(net.davidotek.pupgui2)$
