exit hyprland via exit dispatcher, instead of a script

--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -7,7 +7,7 @@ bind = $mainMod, Return, exec, $term
 bind = $mainMod, F, fullscreen, 1
 bind = $extraMod, F, fullscreen, 0
 bind = $mainMod, Q, killactive,
-bind = $extraMod, Q, exec, $HOME/.local/bin/killhypr
+bind = $extraMod, Q, exit,
 bind = $extraMod, R, exec, $bgreload
 bind = $mainMod, N, exec, $filemanager
 bind = $mainMod, SPACE, togglefloating,
