Add some keybinds

--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -30,6 +30,8 @@ bind = $mainMod, B, changegroupactive, f
 bind = $mainMod, Z, changegroupactive, b
 bind = $extraMod, B, movegroupwindow, f
 bind = $extraMod, Z, movegroupwindow, b
+bind = $mainMod, C, cyclenext
+bind = $extraMod, C, cyclenext, prev
 
 #mpd-mpc remote control
 bind = ,XF86AudioNext, exec, mpc next
