small key rebinds

--- a/.config/swayimg/config
+++ b/.config/swayimg/config
@@ -140,17 +140,17 @@ Shift+Left = step_left 10
 Shift+h = step_left 10
 Shift+Right = step_right 10
 Shift+l = step_right 10
-Shift+Up = step_up 10
-Shift+k = step_up 10
+Up = step_up 10
+k = step_up 10
 Shift+Down = step_down 10
-Shift+j = step_down 10
+j = step_down 10
 Equal = zoom +10
 Plus = zoom +10
-k = zoom +10
-Up = zoom +10
+Shift+k = zoom +10
+Shift+Up = zoom +10
 Minus = zoom -10
-j = zoom -10
-Down = zoom -10
+Shift+j = zoom -10
+Shift+Down = zoom -10
 w = zoom width
 Shift+w = zoom height
 z = zoom fit
