--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -102,6 +102,7 @@ experimental {
 layerrule = blur,launcher
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
+layerrule = blur, bar
 
 #source
 source = $HOME/.config/hypr/hyprland.conf.d/env.conf
