--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -100,6 +100,7 @@ experimental {
 }
 
 layerrule = blur,launcher
+layerrule = dimaround, launcher
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
 layerrule = blur, bar
